// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextField /> should render correctly 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: #EAEAEA;
  border-radius: 0.2rem;
  padding: 0 1.6rem;
  border: 0.2rem solid;
  border-color: #EAEAEA;
}

.c1:focus-within {
  box-shadow: 0 0 0.5rem #F231A5;
}

.c2 {
  color: #030517;
  font-family: Poppins,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Open Sans','Helvetica Neue',sans-serif;
  font-size: 1.6rem;
  padding: 0.8rem;
  background: transparent;
  border: 0;
  outline: none;
  width: 100%;
}

.c0 {
  font-size: 1.4rem;
  color: #030517;
  cursor: pointer;
}

<div>
  <div
    class=""
  >
    <label
      class="c0"
    >
      text
    </label>
    <div
      class="c1"
    >
      <input
        class="c2"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`

exports[`Renders with error 1`] = `
.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: #EAEAEA;
  border-radius: 0.2rem;
  padding: 0 1.6rem;
  border: 0.2rem solid;
  border-color: #EAEAEA;
}

.c4:focus-within {
  box-shadow: 0 0 0.5rem #F231A5;
}

.c5 {
  color: #030517;
  font-family: Poppins,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Open Sans','Helvetica Neue',sans-serif;
  font-size: 1.6rem;
  padding: 0.8rem;
  background: transparent;
  border: 0;
  outline: none;
  width: 100%;
}

.c2 {
  font-size: 1.4rem;
  color: #030517;
  cursor: pointer;
}

.c6 {
  color: #FF6347;
  font-size: 1.2rem;
}

.c0 .c3 {
  border-color: #FF6347;
}

.c0 .c1,
.c0 .sc-hKgILt {
  color: #FF6347;
}

<div
  class="c0"
>
  <label
    class="c1 c2"
    for="TextField"
  >
    TextField
  </label>
  <div
    class="c3 c4"
  >
    <input
      class="c5"
      id="TextField"
      name="TextField"
      type="text"
      value=""
    />
  </div>
  <p
    class="c6"
  >
    error message
  </p>
</div>
`
